# plog

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  PRD.md  README.md  pyproject.toml  render.yaml
api/: examples.http
app/: bootstrap.py  db.py  main.py  models.py  schemas.py  settings.py
app/providers/: naver.py  openai.py
app/services/: auth.py  blogs.py  compose.py  curve.py  keywords.py  outline.py  references.py
app/utils/: tokens.py
docs/: engineering_appendix.md
docs/deployment/: render.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  hooks.ts  styles.css
frontend/src/api/: auth.ts  blogs.ts  client.ts
frontend/src/components/: ProtectedRoute.tsx  TopNav.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx
frontend/src/types/: api.ts
handoff_v1_2_3/: PRD.md  README.md
handoff_v1_2_3/api/: openapi.yaml
handoff_v1_2_3/data/: sample_candidates.json  sample_posts.csv
handoff_v1_2_3/docs/ui/: wireframes.md
handoff_v1_2_3/tests/: acceptance.md
prompts/: compose_with_research.md  outline_plan.md
