[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plog"
version = "0.1.0"
description = "Plog backend service"
authors = [{name="Plog Team"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "sqlmodel>=0.0.16",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "anyio>=4.0"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]
